# wxwidgets_scaffold

./: .gitmodules  CMakeLists.txt  ReadME.md
src/: CMakeLists.txt
src/ui/: CMakeLists.txt  main.cpp
