project(wx_ui)

add_executable(${PROJECT_NAME} WIN32 "")

target_sources(${PROJECT_NAME} 
    PRIVATE
        main.cpp
)

# target_include_directories(
#     ${PROJECT_NAME}
#     PUBLIC
#     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> # or ${PROJECT_SOURCE_DIR}/include
#     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}> # or include
# )

target_link_libraries(${PROJECT_NAME} wx::core wx::base)

# set_target_properties(
#     ${PROJECT_NAME} 
#     PROPERTIES 
#     SKIP_BUILD_RPATH FALSE
#     BUILD_WITH_INSTALL_RPATH FALSE
#     INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}"
#     INSTALL_RPATH_USE_LINK_PATH TRUE
# )

# Install
install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    #PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} # Windows ONly
)
